crates/mlcg_builtin_macros/tests/ui/fail_method_collision.stderr
error: generated processor method `foo_into` for instruction `foo_into` collides with instruction `foo`
 --> tests/ui/fail_method_collision.rs:2:5
  |
2 |     mlcg_builtin_macros::include_manifest!("tests/method_collision_manifest.toml");
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `mlcg_builtin_macros::include_manifest` (in Nightly builds, run with -Z macro-backtrace for more info)
