crates/mlcg_builtin_macros/tests/ui/fail_method_collision.rs
mod generated {
    mlcg_builtin_macros::include_manifest!("tests/method_collision_manifest.toml");
}

fn main() {}
